Parse phone numbers and create separate button for each of them.

--- a/app/modules/rehearsalRooms/details/details.component.html
+++ b/app/modules/rehearsalRooms/details/details.component.html
@@ -1,12 +1,13 @@
 <ActionBar [title]="selectedRehearsalRoom?.Name" class="action-bar">
 </ActionBar>
-<GridLayout columns="80, *, auto" rows="30, 30, auto, *" className="longLabel">
+<GridLayout columns="80, *, auto" rows="40, 40, auto, *" className="longLabel">
     <Label text="Телефон: " row="0" col="0"></Label>
-    <Label text="{{ selectedRehearsalRoom?.PhoneNumber}}" row="0" col="1" (tap)="call(selectedRehearsalRoom?.PhoneNumber)"></Label>
-
+    <StackLayout row="0" col="1" orientation="horizontal">
+        <Button *ngFor="let item of parsedPhoneNumbers" [text]="item" (tap)="call(item)"></Button>
+    </StackLayout>
     <Label text="Работно време: " row="1" col="0"></Label>
     <Label text="{{ toTimeString(selectedRehearsalRoom?.OpensAt) }} - {{ toTimeString(selectedRehearsalRoom?.ClosesAt) }}" row="1" col="1"></Label>
-
+ 
     <Label text="Адрес: " row="2" col="0"></Label>
     <Label text="{{ selectedRehearsalRoom?.AddressText }}" textWrap="True" row="2" col="1"></Label>
 
