Add icons for making a phone call. Add new component for displaying a map.

--- a/app/modules/rehearsalRooms/details/details.component.css
+++ b/app/modules/rehearsalRooms/details/details.component.css
@@ -30,7 +30,8 @@ gridlayout {
     margin-top: 0;
 }
 
-.call-icon {
+.call-icon{
+    margin-left:10;
     font-family: 'icomoon';
-    content: "home";
+    content: "phone";
 }
