Add back button to the navigation bar

--- a/app/modules/rehearsalRooms/map/map.component.html
+++ b/app/modules/rehearsalRooms/map/map.component.html
@@ -1,5 +1,5 @@
-<ActionBar title="Карта">
-  <!-- actionbar items  -->
+<ActionBar title="{{title}} - карта">
+  <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="onNavBtnTap()"></NavigationButton>
 </ActionBar>
 <StackLayout>
 <Mapbox
