change mapbox key to public key

--- a/app/modules/rehearsalRooms/map/map.component.html
+++ b/app/modules/rehearsalRooms/map/map.component.html
@@ -3,7 +3,7 @@
 </ActionBar>
 <StackLayout>
 <Mapbox
-    accessToken="sk.eyJ1IjoiZXRhYmFrb3YiLCJhIjoiY2l5bzZ6Y3pxMDA2MjJ4b2Q5eG5ncWZmNyJ9._sid81WWKpzcijivY8tOaw"
+    accessToken="pk.eyJ1IjoiZXRhYmFrb3YiLCJhIjoiY2l5bzZ3Z2huMDAyMDMzcGR3YWZhdHNzayJ9.oV-13mVInUUzwSrROzVglQ"
     mapStyle="light"
     latitude="{{ latitude }}"
     longitude="{{ longitude}}"
