Add view for for map with all rooms

--- a/app/modules/rehearsalRooms/list/list.component.html
+++ b/app/modules/rehearsalRooms/list/list.component.html
@@ -1,5 +1,8 @@
-<ActionBar title="Репетиционни">
-  <!-- actionbar items  -->
+<ActionBar title="Репетиционни" class="action-bar">
+    <StackLayout orientation="horizontal">
+    
+    <Label text="Карта" (tap)="onNavMapTap()"></Label>
+    </StackLayout>
 </ActionBar>
 
 <GridLayout rows="*">
