Add event handler for map ready

--- a/app/modules/rehearsalRooms/map-all/map-all.component.html
+++ b/app/modules/rehearsalRooms/map-all/map-all.component.html
@@ -13,5 +13,6 @@
     hideLogo="true"
     disableRotation="true"
     disableTilt="true"
-    delay="500"></Mapbox> 
+    delay="500"
+    (mapReady)="onMapReady($event)"></Mapbox> 
 </StackLayout>
