Fix dissappearing label

--- a/app/modules/rehearsalRooms/list/list.component.html
+++ b/app/modules/rehearsalRooms/list/list.component.html
@@ -1,5 +1,6 @@
-<ActionBar title="Репетиционни" class="action-bar">
+<ActionBar title="" class="action-bar">
     <StackLayout orientation="horizontal">
+        <Label text="Репетиционни"></Label>
         <Label text="Карта" (tap)="onNavMapTap()"></Label>
     </StackLayout>
 </ActionBar>
