Add background image

--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,5 @@
 @import 'nativescript-theme-core/css/core.light.css';
 
 page {
-    /*background-image: ~/images/music-sheet-bg.png;   */
+    background-image: ~/images/bg.png;   
 }
