--- a/app/modules/rehearsalRooms/list/list.component.html
+++ b/app/modules/rehearsalRooms/list/list.component.html
@@ -1,7 +1,7 @@
 <ActionBar title="" class="action-bar">
     <StackLayout orientation="horizontal">
-        <Label text="Репетиционни"></Label>
-        <Label text="Карта" (tap)="onNavMapTap()"></Label>
+        <Label text="Репетиционни" class="title title-bolded"></Label>
+        <Label text="Карта" (tap)="onNavMapTap()" class="title"></Label>
     </StackLayout>
 </ActionBar>
 
