Change the layout, add some styles

--- a/app/modules/rehearsalRooms/list/list.component.html
+++ b/app/modules/rehearsalRooms/list/list.component.html
@@ -2,6 +2,7 @@
     <StackLayout orientation="horizontal">
         <Label text="Репетиционни" class="title title-bolded"></Label>
         <Label text="Карта" (tap)="onNavMapTap()" class="title"></Label>
+        <Label text="map2" (tap)="onNavMapTap()" class="map-button"></Label>
     </StackLayout>
 </ActionBar>
 
