--- a/app/modules/rehearsalRooms/details/details.component.css
+++ b/app/modules/rehearsalRooms/details/details.component.css
@@ -1,4 +1,4 @@
-.bordered {
+.details-box {
     border: 1;
     border-radius: 5;
     border-color: #000000;
@@ -8,22 +8,13 @@
     margin-bottom: 5;
     margin-right: 5;
 
-    padding: 5;   
-}
-
-gridlayout {
+    padding: 10;   
+    
     background-color: white;
     background-image: none;
 
-    border-width: 1;
-    border-color: black;
-    border-radius: 10; 
-
-    margin-top: 30;
-    margin-left: 30;
-    margin-right:30;
-    margin-bottom: 30;
-} 
+    text-align: center;
+}
 
 .btn-call {
     background-color: transparent;
@@ -33,5 +24,10 @@ gridlayout {
 .call-icon{
     margin-left:10;
     font-family: 'icomoon';
+    font-size: 18;
     content: "phone";
+}
+
+.details-box-items {
+    justify-content: space-between;
 }
