--- a/app/modules/rehearsalRooms/map-all/map-all.component.html
+++ b/app/modules/rehearsalRooms/map-all/map-all.component.html
@@ -1,4 +1,4 @@
-<ActionBar title="Карта">
+<ActionBar title="Карта" class="action-bar">
   <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="onNavBtnTap()"></NavigationButton>
 </ActionBar>
 <StackLayout>
