--- a/app/modules/rehearsalRooms/map/map.component.html
+++ b/app/modules/rehearsalRooms/map/map.component.html
@@ -1,4 +1,4 @@
-<ActionBar title="{{title}} - карта">
+<ActionBar title="{{title}} - карта" class="action-bar">
   <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="onNavBtnTap()"></NavigationButton>
 </ActionBar>
 <StackLayout>
