Fix text alignment Onclick on the map also goes to details

--- a/app/modules/rehearsalRooms/details/details.component.html
+++ b/app/modules/rehearsalRooms/details/details.component.html
@@ -21,9 +21,9 @@
     <StackLayout class="details-box" (tap)="goToMap()">
         <StackLayout orientation="horizontal" style="margin-bottom: 10; margin-right:15">
             <Label text="location" class="pin-icon" ></Label>
-            <Label text="{{ selectedRehearsalRoom?.AddressText }} [+]" textWrap="True"></Label>            
+            <Label text="{{ selectedRehearsalRoom?.AddressText }}" textWrap="True"></Label>            
         </StackLayout>
-        <ContentView width="350" height="150" > 
+        <GridLayout width="350" height="150" > 
             <Mapbox
                 accessToken="pk.eyJ1IjoiZXRhYmFrb3YiLCJhIjoiY2l5bzZ3Z2huMDAyMDMzcGR3YWZhdHNzayJ9.oV-13mVInUUzwSrROzVglQ"
                 mapStyle="light"
@@ -39,9 +39,11 @@
                 disableScroll="true"
                 delay="500"
                 (mapReady)="onMapReady($event)"></Mapbox> 
-        </ContentView>
+
+                <GridLayout (tap)="goToMap()"></GridLayout>
+        </GridLayout>
     </StackLayout>
     <FlexboxLayout class="details-box" *ngIf="selectedRehearsalRoom?.Description">
-        <Label [text]="selectedRehearsalRoom?.Description" textWrap="True"></Label>
+        <Label [text]="selectedRehearsalRoom?.Description" textWrap="True" textAlignment="left"></Label>
     </FlexboxLayout>
 </StackLayout>
