--- a/app/modules/rehearsalRooms/map-all/map-all.component.html
+++ b/app/modules/rehearsalRooms/map-all/map-all.component.html
@@ -2,17 +2,10 @@
   <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="onNavBtnTap()"></NavigationButton>
 </ActionBar>
 <StackLayout>
-<Mapbox
-    accessToken="pk.eyJ1IjoiZXRhYmFrb3YiLCJhIjoiY2l5bzZ3Z2huMDAyMDMzcGR3YWZhdHNzayJ9.oV-13mVInUUzwSrROzVglQ"
-    mapStyle="light"
+<MapView        
     latitude="42.6958942"
     longitude="23.3133232"
-    zoomLevel="11"
-    showUserLocation="true"
-    hideCompass="true"
-    hideLogo="true"
-    disableRotation="true"
-    disableTilt="true"
-    delay="500"
-    (mapReady)="onMapReady($event)"></Mapbox> 
+    zoom="11"     
+    (mapReady)="onMapReady($event)"
+    (markerInfoWindowTapped)="onMarkerInfoWindowTapped($event)"></MapView> 
 </StackLayout>
