--- a/app/modules/rehearsalRooms/map/map.component.html
+++ b/app/modules/rehearsalRooms/map/map.component.html
@@ -2,17 +2,9 @@
   <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="onNavBtnTap()"></NavigationButton>
 </ActionBar>
 <StackLayout>
-<Mapbox
-    accessToken="pk.eyJ1IjoiZXRhYmFrb3YiLCJhIjoiY2l5bzZ3Z2huMDAyMDMzcGR3YWZhdHNzayJ9.oV-13mVInUUzwSrROzVglQ"
-    mapStyle="light"
+<MapView
     latitude="{{ latitude }}"
     longitude="{{ longitude}}"
-    zoomLevel="16"
-    showUserLocation="true"
-    hideCompass="true"
-    hideLogo="true"
-    disableRotation="true"
-    disableTilt="true"
-    delay="500"
-    (mapReady)="onMapReady($event)"></Mapbox> 
+    zoom="18"    
+    (mapReady)="onMapReady($event)"></MapView> 
 </StackLayout>
