--- a/app/modules/rehearsalRooms/details/details.component.html
+++ b/app/modules/rehearsalRooms/details/details.component.html
@@ -1,7 +1,7 @@
 <ActionBar [title]="selectedRehearsalRoom?.Name" class="action-bar">
     <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="onNavBtnTap()"></NavigationButton>
 </ActionBar>
-<ScrollView>
+<ScrollView orientation="vertical">
     <StackLayout>
 
         <FlexboxLayout className="details-box" justifyContent="space-between" *ngIf="selectedRehearsalRoom?.PhoneNumber">
