Fixes #2 temporary solve the app crash on back button. It looks like an issue with MapView in a ScrollView. I will move the MapView out of the ScrollView until a permanent fix is found.

--- a/app/modules/rehearsalRooms/details/details.component.html
+++ b/app/modules/rehearsalRooms/details/details.component.html
@@ -1,37 +1,36 @@
 <ActionBar [title]="selectedRehearsalRoom?.Name" class="action-bar">
     <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="onNavBtnTap()"></NavigationButton>
 </ActionBar>
-<ScrollView orientation="vertical">
-    <StackLayout>
+<StackLayout>
 
-        <FlexboxLayout className="details-box" justifyContent="space-between" *ngIf="selectedRehearsalRoom?.PhoneNumber">
-            <Label *ngFor="let item of parsedPhoneNumbers" text="phone {{item}}" (tap)="call(item)" class="call-icon"></Label>
-        </FlexboxLayout>
+    <FlexboxLayout className="details-box" justifyContent="space-between" *ngIf="selectedRehearsalRoom?.PhoneNumber">
+        <Label *ngFor="let item of parsedPhoneNumbers" text="phone {{item}}" (tap)="call(item)" class="call-icon"></Label>
+    </FlexboxLayout>
 
-        <StackLayout class="details-box" orientation="horizontal" *ngIf="selectedRehearsalRoom?.OpensAt || selectedRehearsalRoom?.ClosesAt">
-            <Label text="office" class="pin-icon"></Label>
-            <Label text="Работно време: {{ toTimeString(selectedRehearsalRoom?.OpensAt) }} - {{ toTimeString(selectedRehearsalRoom?.ClosesAt) }}"
-                style="margin-left: 20"></Label>
+    <StackLayout class="details-box" orientation="horizontal" *ngIf="selectedRehearsalRoom?.OpensAt || selectedRehearsalRoom?.ClosesAt">
+        <Label text="office" class="pin-icon"></Label>
+        <Label text="Работно време: {{ toTimeString(selectedRehearsalRoom?.OpensAt) }} - {{ toTimeString(selectedRehearsalRoom?.ClosesAt) }}"
+            style="margin-left: 20"></Label>
+    </StackLayout>
+
+    <StackLayout class="details-box" orientation="horizontal" (tap)="goToUrl()" *ngIf="selectedRehearsalRoom?.WebsiteUrl">
+        <Label text="sphere" class="pin-icon"></Label>
+        <Label text="{{ selectedRehearsalRoom?.WebsiteUrl}}" style="margin-left: 20"></Label>
+    </StackLayout>
+
+    <StackLayout class="details-box" (tap)="goToMap()">
+        <StackLayout orientation="horizontal" style="margin-bottom: 10; margin-right:15">
+            <Label text="location" class="pin-icon"></Label>
+            <Label text="{{ selectedRehearsalRoom?.AddressText }}" textWrap="True"></Label>
         </StackLayout>
-
-        <StackLayout class="details-box" orientation="horizontal" (tap)="goToUrl()" *ngIf="selectedRehearsalRoom?.WebsiteUrl">
-            <Label text="sphere" class="pin-icon"></Label>
-            <Label text="{{ selectedRehearsalRoom?.WebsiteUrl}}" style="margin-left: 20"></Label>
-        </StackLayout>
-
-        <StackLayout class="details-box" (tap)="goToMap()">
-            <StackLayout orientation="horizontal" style="margin-bottom: 10; margin-right:15">
-                <Label text="location" class="pin-icon"></Label>
-                <Label text="{{ selectedRehearsalRoom?.AddressText }}" textWrap="True"></Label>
-            </StackLayout>
-            <GridLayout width="350" height="150">
-                <MapView
-                    latitude="{{ latitude}}" longitude="{{ longitude}}" zoom="15" (mapReady)="onMapReady($event)"></MapView>
-                    <GridLayout (tap)="goToMap()"></GridLayout>
-            </GridLayout>
-        </StackLayout>
+        <GridLayout width="350" height="150">
+            <MapView latitude="{{ latitude}}" longitude="{{ longitude}}" zoom="15" (mapReady)="onMapReady($event)"></MapView>
+            <GridLayout (tap)="goToMap()"></GridLayout>
+        </GridLayout>
+    </StackLayout>
+    <ScrollView orientation="vertical">
         <FlexboxLayout class="details-box" *ngIf="selectedRehearsalRoom?.Description">
             <Label [text]="selectedRehearsalRoom?.Description" textWrap="True" textAlignment="left"></Label>
         </FlexboxLayout>
-    </StackLayout>
-</ScrollView>
+    </ScrollView>
+</StackLayout>
